--- a/index.html
+++ b/index.html
@@ -5,22 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Me myself and I</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <header>
-      <h1>My Portfolio</h1>
-    </header>
-    <nav>
-      <ul>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <div class="container">
+        <a href="#" class="navbar-brand mb-0 h1">My Portfolio</a>
+        <button
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarId"
+          class="navbar-toggler"
+          aria-controls="navbarId"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarId">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="#about" class="nav-link active">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a href="#projects" class="nav-link">Projects</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                href="#contact"
+                class="nav-link dropdown-toggle"
+                id="contactId"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+                >Contact</a
+              >
+              <ul class="dropdown-menu" aria-labelledby="contactId">
+                <li><a href="#linkedin" class="dropdown-item">LinkedIn</a></li>
+                <li><a href="#email" class="dropdown-item">E-mail</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
     <main>
       <section id="about">
         <h2>About Me</h2>
-        <p>Some info</p>
+        <p>
+          But I must explain to you how all this mistaken idea of denouncing
+          pleasure and praising pain was born and I will give you a complete
+          account of the system, and expound the actual teachings of the great
+          explorer of the truth, the master-builder of human happiness. No one
+          rejects, dislikes, or avoids pleasure itself, because it is pleasure,
+          but because those who do not know how to pursue pleasure rationally
+          encounter consequences that are extremely painful. Nor again is there
+          anyone who loves or pursues or desires to obtain pain of itself,
+          because it is pain, but because occasionally circumstances occur in
+          which toil and pain can procure him some great pleasure. To take a
+          trivial example, which of us ever undertakes laborious physical
+          exercise, except to obtain some advantage from it? But who has any
+          right to find fault with a man who chooses to enjoy a pleasure that
+          has no annoying consequences, or one who avoids a pain that produces
+          no resultant pleasure?
+        </p>
       </section>
       <section id="projects">
         <h2>Projects</h2>
@@ -34,13 +87,24 @@
         <h2>Contact</h2>
         <p>You can contact me at:</p>
         <ul>
-          <li>Email: rakmate9812@gmail.com</li>
-          <li>Phone: +36 20 289 68 zerofive</li>
+          <li id="email">via Email: rakmate9812@gmail.com</li>
+          <li id="linkedin">
+            via LinkedIn:
+            <a
+              href="https://www.linkedin.com/in/m%C3%A1t%C3%A9-r%C3%A1k-1210ab22b/"
+              >Máté Rák</a
+            >
+          </li>
         </ul>
       </section>
     </main>
     <footer>
       <p>Copyright 2023</p>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
