--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
       <div class="container">
         <a href="#" class="navbar-brand mb-0 h1">My Portfolio</a>
         <button
@@ -54,49 +55,81 @@
         </div>
       </div>
     </nav>
-    <main>
-      <section id="about">
-        <h2>About Me</h2>
-        <p>
-          But I must explain to you how all this mistaken idea of denouncing
-          pleasure and praising pain was born and I will give you a complete
-          account of the system, and expound the actual teachings of the great
-          explorer of the truth, the master-builder of human happiness. No one
-          rejects, dislikes, or avoids pleasure itself, because it is pleasure,
-          but because those who do not know how to pursue pleasure rationally
-          encounter consequences that are extremely painful. Nor again is there
-          anyone who loves or pursues or desires to obtain pain of itself,
-          because it is pain, but because occasionally circumstances occur in
-          which toil and pain can procure him some great pleasure. To take a
-          trivial example, which of us ever undertakes laborious physical
-          exercise, except to obtain some advantage from it? But who has any
-          right to find fault with a man who chooses to enjoy a pleasure that
-          has no annoying consequences, or one who avoids a pain that produces
-          no resultant pleasure?
-        </p>
-      </section>
-      <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-          <li>Here'll be a Pizza restaurant website project</li>
-          <li>Maybe I'll do some data science</li>
-          <li>Project dk</li>
-        </ul>
-      </section>
-      <section id="contact">
-        <h2>Contact</h2>
-        <p>You can contact me at:</p>
-        <ul>
-          <li id="email">via Email: rakmate9812@gmail.com</li>
-          <li id="linkedin">
-            via LinkedIn:
-            <a
-              href="https://www.linkedin.com/in/m%C3%A1t%C3%A9-r%C3%A1k-1210ab22b/"
-              >Máté Rák</a
-            >
-          </li>
-        </ul>
-      </section>
+    <main class="pt-from-navbar">
+      <div class="container">
+        <section id="about">
+          <h2>About Me</h2>
+          <h4>In general</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vel
+            orci consectetur, rhoncus metus at, lacinia nulla. Maecenas massa
+            neque, mattis ut commodo id, vestibulum in enim. Pellentesque
+            aliquet enim ornare orci ullamcorper, eget auctor sapien accumsan.
+            Maecenas porttitor, diam id accumsan venenatis, mi turpis luctus
+            neque, sed malesuada neque est vitae ipsum. Curabitur libero eros,
+            gravida in commodo a, aliquam in lectus. Fusce vehicula vulputate
+            ipsum at bibendum. Proin ornare, sapien a cursus euismod, libero
+            metus malesuada massa, vel sodales nulla augue vitae nibh. Phasellus
+            mauris quam, pellentesque eget pretium a, lobortis et sem. Proin
+            eleifend vestibulum accumsan.
+          </p>
+          <h4>Education</h4>
+          <p>
+            But I must explain to you how all this mistaken idea of denouncing
+            pleasure and praising pain was born and I will give you a complete
+            account of the system, and expound the actual teachings of the great
+            explorer of the truth, the master-builder of human happiness. No one
+            rejects, dislikes, or avoids pleasure itself, because it is
+            pleasure, but because those who do not know how to pursue pleasure
+            rationally encounter consequences that are extremely painful. Nor
+            again is there anyone who loves or pursues or desires to obtain pain
+            of itself, because it is pain, but because occasionally
+            circumstances occur in which toil and pain can procure him some
+            great pleasure.
+          </p>
+          <h4>Skills</h4>
+          <p>
+            Quisque posuere tempus libero, ac efficitur mauris suscipit sit
+            amet. Duis auctor dui in nisl ornare, at luctus lacus malesuada.
+            Vivamus molestie dui et erat varius condimentum. Nam eget felis eget
+            augue egestas tincidunt. Pellentesque eu facilisis nunc. Vestibulum
+            pharetra sollicitudin felis quis iaculis. Fusce varius eros porta
+            metus dictum pellentesque. Ut et odio id dui tempus euismod eget et
+            sem. Ut feugiat cursus ultricies. Sed rutrum dolor sem, vel bibendum
+            lorem euismod quis. Etiam elementum imperdiet velit nec dictum.
+            Nullam lectus massa, feugiat id arcu vitae, feugiat euismod purus.
+            Proin tincidunt turpis a fringilla porta. Donec fermentum purus
+            vitae dolor convallis interdum. Proin eget massa eu nunc lacinia
+            porta eget ut mauris.
+          </p>
+        </section>
+      </div>
+      <div class="container">
+        <section id="projects">
+          <h2>Projects</h2>
+          <ul>
+            <li>Here'll be a Pizza restaurant website project</li>
+            <li>Maybe I'll do some data science</li>
+            <li>I would like this part to be horizontal</li>
+          </ul>
+        </section>
+      </div>
+      <div class="container">
+        <section id="contact">
+          <h2>Contact</h2>
+          <p>You can contact me at:</p>
+          <ul>
+            <li id="email">via Email: rakmate9812@gmail.com</li>
+            <li id="linkedin">
+              via LinkedIn:
+              <a
+                href="https://www.linkedin.com/in/m%C3%A1t%C3%A9-r%C3%A1k-1210ab22b/"
+                >Máté Rák</a
+              >
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <footer>
       <p>Copyright 2023</p>
