--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
               <a href="#about" class="nav-link">About Me</a>
             </li>
             <li class="nav-item">
+              <a href="#skills" class="nav-link">Skills</a>
+            </li>
+            <li class="nav-item">
               <a href="#projects" class="nav-link">Projects</a>
             </li>
             <li class="nav-item dropdown">
@@ -57,7 +60,7 @@
     </nav>
     <main>
       <div class="container">
-        <section id="about">
+        <section id="intro">
           <h1>Intro</h1>
           <p>
             Hi! I would like to introduce myself. My name is Máté and this is my
@@ -66,6 +69,8 @@
             at the end of the page.<br />
             Have a good time!
           </p>
+        </section>
+        <section id="about">
           <h2>About Me</h2>
           <!-- In General -->
           <div class="card mb-3" style="max-width: 1000px">
@@ -149,26 +154,121 @@
               </div>
             </div>
           </div>
-          <!-- Skills -->
+        </section>
+        <section id="skills">
+          <h2>Skills</h2>
           <div class="card text-center">
             <div class="card-header">
               <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="true" href="#"
+                  <a
+                    class="nav-link active"
+                    aria-current="true"
+                    href="#"
+                    id="workskills"
                     >Work</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">School</a>
+                  <a class="nav-link" href="#" id="nav-schoolskills">School</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Self-learnt</a>
+                  <a class="nav-link" href="#" id="nav-selfskills"
+                    >Self-learnt</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#" id="nav-softskills">Soft</a>
                 </li>
               </ul>
             </div>
-            <div class="card-body">
-              <h5 class="card-title">Skills</h5>
-              <p class="card-text">Support text will go here. <br />Brrrrr.</p>
+            <div class="card-body d-flex justify-content-between">
+              <!-- <p class="card-text">
+                Intro text to skills when nothing is chosen will go here.
+                <br />Brrrrr.
+              </p> -->
+              <div
+                class="card text-dark bg-light mb-3"
+                style="max-width: 18rem"
+              >
+                <div class="card-header">Header 1</div>
+                <div class="card-body">
+                  <h5 class="card-title">Title 1</h5>
+                  <p class="card-text">
+                    Suspendisse vitae est commodo, consectetur dui eu, luctus
+                    dui.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="card text-dark bg-light mb-3"
+                style="max-width: 18rem"
+              >
+                <div class="card-header">Header 2</div>
+                <div class="card-body">
+                  <h5 class="card-title">Title 2</h5>
+                  <p class="card-text">
+                    In ultricies, quam a finibus tincidunt, nunc magna iaculis
+                    est, vitae viverra sem dui quis tellus.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="card text-dark bg-light mb-3"
+                style="max-width: 18rem"
+              >
+                <div class="card-header">Header 3</div>
+                <div class="card-body">
+                  <h5 class="card-title">Title 3</h5>
+                  <p class="card-text">
+                    Proin et purus porta, convallis nulla vel, viverra elit.
+                  </p>
+                </div>
+              </div>
+              <div
+                class="card text-dark bg-light mb-3"
+                style="max-width: 18rem"
+              >
+                <div class="card-header">Header 4</div>
+                <div class="card-body">
+                  <h5 class="card-title">Title 4</h5>
+                  <p class="card-text">
+                    Morbi dignissim, libero sit amet rutrum convallis, nisi
+                    velit pulvinar diam, aliquet ultricies velit odio eu quam.
+                  </p>
+                </div>
+              </div>
+              <!-- <div id="workskills">
+                <ul>
+                  <li>Workskill 1</li>
+                  <li>Workskill 2</li>
+                  <li>Workskill 3</li>
+                  <li>Workskill 4</li>
+                  <li>Workskill 5</li>
+                </ul>
+              </div>
+              <div id="schoolskills">
+                <ul>
+                  <li>Schoolskill 1</li>
+                  <li>Schoolskill 1</li>
+                  <li>Schoolskill 3</li>
+                </ul>
+              </div>
+              <div id="selflearntskills">
+                <ul>
+                  <li>Self-learnt skill 1</li>
+                  <li>Self-learnt skill 1</li>
+                  <li>Self-learnt skill 1</li>
+                </ul>
+              </div>
+              <div id="softskills">
+                <ul>
+                  <li>Softskill 1</li>
+                  <li>Softskill 2</li>
+                  <li>Softskill 3</li>
+                  <li>Softskill 4</li>
+                </ul>
+              </div> -->
             </div>
           </div>
         </section>
