--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Me myself and I</title>
+    <!-- Links via CDN, I don't feel like dealing with npm in a small project like this -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +27,7 @@
     <script defer src="script.js"></script>
   </head>
   <body>
-    <!-- <nav class="navbar navbar-expand-sm bg-secondary navbar-dark sticky-top justify-content-center"></nav> -->
+    <!-- Navbar -->
     <nav class="navbar sticky-top navbar-expand-sm navbar-light bg-light">
       <div class="container">
         <a href="" class="navbar-brand mb-0 h1">My Portfolio</a>
@@ -72,6 +73,7 @@
       </div>
     </nav>
     <main>
+      <!-- Intro -->
       <div class="container">
         <section id="intro">
           <h1>Intro</h1>
@@ -84,6 +86,7 @@
           </p>
         </section>
       </div>
+      <!-- About Me -->
       <div class="container">
         <section id="about">
           <h2>About Me</h2>
@@ -171,6 +174,7 @@
           </div>
         </section>
       </div>
+      <!-- Skills -->
       <div class="container">
         <section id="skills">
           <h2>Skills</h2>
@@ -270,19 +274,85 @@
           </div>
         </section>
       </div>
+      <!-- Projects -->
       <div class="container">
         <section id="projects">
           <h2>Projects</h2>
-          <ul>
-            <li>Here'll be a Pizza restaurant website project</li>
-            <li>Maybe I'll do some data science</li>
-            <li>
-              I would like this part to be horizontal swipeable cards next to
-              each other
-            </li>
-          </ul>
+          <div
+            id="carouselExampleCaptions"
+            class="carousel carousel-dark slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <!-- Slide -->
+              <div class="carousel-item active">
+                <img
+                  src="img/forkify.png"
+                  class="d-block w-100 project-images"
+                  alt="forkify"
+                />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Slide</h5>
+                  <p>Lorem ipsum</p>
+                </div>
+              </div>
+              <!-- Slide -->
+              <div class="carousel-item">
+                <img
+                  src="img/github.jpg"
+                  class="d-block w-100 project-images"
+                  alt="github"
+                />
+                <div class="carousel-caption d-none d-md-block text-white">
+                  <h5>Slide</h5>
+                  <p>Lorem ipsum</p>
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </section>
       </div>
+      <!-- Contact -->
       <div class="container">
         <section id="contact">
           <h2>Contact</h2>
@@ -300,15 +370,22 @@
         </section>
       </div>
     </main>
+    <!-- Footer -->
     <footer>
-      <p>
-        Thank you for getting this far! The present I promised, you've already
-        gotten. You got to know another human being in your lifetime. People
-        should appreciate these kind of little things in life, because you only
-        got 1. So, if you want this relationship to be two-way, you should
-        contact me when you're done here. Bye!
-      </p>
-      <p>Copyright 2023</p>
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10 text-center">
+          <p>
+            Thank you for getting this far! The present I promised, you've
+            already gotten. You got to know another human being in your
+            lifetime. People should appreciate these kind of little things in
+            life, because you only got 1. So, if you want this relationship to
+            be two-way, you should contact me when you're done here. Bye!
+          </p>
+          <p>© 2023 by Máté Rák</p>
+        </div>
+      </div>
+      <div class="col-1"></div>
     </footer>
   </body>
 </html>
