--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     </main>
     <!-- Footer -->
     <footer>
-      <div class="row">
+      <div class="row pt-5 pb-5 bg-secondary text-white">
         <div class="col-1"></div>
         <div class="col-10 text-center">
           <p>
