'small-changes-to-nav-and-grid'

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar sticky-top navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar sticky-top navbar-expand-sm navbar-light bg-nav-foot">
       <div class="container">
         <a href="" class="navbar-brand mb-0 h1">My Portfolio</a>
         <button
@@ -356,11 +356,14 @@
       <div class="container">
         <section id="contact">
           <h2>Contact</h2>
-          <p>You can contact me at:</p>
-          <ul>
-            <li id="email">via Email: rakmate9812@gmail.com</li>
-            <li id="linkedin">
-              via LinkedIn:
+          <p>You can contact me via</p>
+          <div class="col-sm-4"></div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item" id="email">
+              Email: rakmate9812@gmail.com
+            </li>
+            <li class="list-group-item" id="linkedin">
+              LinkedIn:
               <a
                 href="https://www.linkedin.com/in/m%C3%A1t%C3%A9-r%C3%A1k-1210ab22b/"
                 >Máté Rák</a
@@ -372,7 +375,7 @@
     </main>
     <!-- Footer -->
     <footer>
-      <div class="row pt-5 pb-5 bg-secondary text-white">
+      <div class="row mt-3 pt-5 pb-5 bg-nav-foot">
         <div class="col-1"></div>
         <div class="col-10 text-center">
           <p>
