--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script defer src="script.js"></script>
   </head>
   <body>
-    <!-- Navbar -->
+    <!-- h Navbar -->
     <nav class="navbar sticky-top navbar-expand-sm navbar-light bg-nav-foot">
       <div class="container">
         <a href="" class="navbar-brand mb-0 h1">My Portfolio</a>
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="navbarId">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="#about" class="nav-link">About Me</a>
+              <a href="#about" class="nav-link">About</a>
             </li>
             <li class="nav-item">
               <a href="#skills" class="nav-link">Skills</a>
@@ -73,23 +73,25 @@
       </div>
     </nav>
     <main>
-      <!-- Intro -->
+      <!-- h1 Intro -->
       <div class="container">
         <section id="intro">
           <h1>Intro</h1>
-          <p>
-            Hi! I would like to introduce myself. My name is Máté and this is my
-            self-made portfolio page. I suppose you navigated here, because you
-            saw this somewhere online. If you carry on, you will get a present
-            at the end of the page.<br />
-            Have a good time!
-          </p>
+          <div class="row mb-5">
+            <p>
+              Hi! I would like to introduce myself. My name is Máté and this is
+              my self-made portfolio page. I suppose you navigated here, because
+              you saw this somewhere online. If you carry on, you will get a
+              present at the end of the page.<br />
+              Have a good time!
+            </p>
+          </div>
         </section>
       </div>
-      <!-- About Me -->
+      <!-- h2 About -->
       <div class="container">
         <section id="about">
-          <h2>About Me</h2>
+          <h2>About</h2>
           <!-- In General -->
           <div class="card mb-3" style="max-width: 1000px">
             <div class="row g-0">
@@ -120,30 +122,28 @@
             </div>
           </div>
           <!-- Education -->
-          <div class="row">
-            <div class="col-lg-6 offset-lg-6">
-              <div class="card mb-3" style="max-width: 750px">
-                <div class="row g-0">
-                  <div class="col-lg-8">
-                    <div class="card-body">
-                      <h5 class="card-title">Education</h5>
-                      <p class="card-text">
-                        Fusce nisl massa, ullamcorper vel tincidunt non,
-                        fringilla sed nisl. In lacinia nisi at tellus lacinia
-                        mollis. Duis lacinia, est id euismod vestibulum, justo
-                        justo semper mauris, vel eleifend mauris neque nec erat.
-                        Morbi mattis velit eu est convallis sodales. Etiam
-                        luctus ac enim non maximus.
-                      </p>
-                    </div>
+          <div class="col-lg-6 offset-lg-6">
+            <div class="card mb-3" style="max-width: 750px">
+              <div class="row g-0">
+                <div class="col-lg-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Education</h5>
+                    <p class="card-text">
+                      Fusce nisl massa, ullamcorper vel tincidunt non, fringilla
+                      sed nisl. In lacinia nisi at tellus lacinia mollis. Duis
+                      lacinia, est id euismod vestibulum, justo justo semper
+                      mauris, vel eleifend mauris neque nec erat. Morbi mattis
+                      velit eu est convallis sodales. Etiam luctus ac enim non
+                      maximus.
+                    </p>
                   </div>
-                  <div class="col-lg-4">
-                    <img
-                      src="img\education.jpg"
-                      class="img-fluid rounded-start"
-                      alt="..."
-                    />
-                  </div>
+                </div>
+                <div class="col-lg-4">
+                  <img
+                    src="img\education.jpg"
+                    class="img-fluid rounded-start"
+                    alt="..."
+                  />
                 </div>
               </div>
             </div>
@@ -174,7 +174,7 @@
           </div>
         </section>
       </div>
-      <!-- Skills -->
+      <!-- h2 Skills -->
       <div class="container">
         <section id="skills">
           <h2>Skills</h2>
@@ -206,7 +206,6 @@
             </div>
             <div class="card-body justify-content-between">
               <!-- Card deck -->
-              <div class="row"></div>
               <div class="row card-deck-sortable">
                 <!-- Card -->
                 <div class="col-auto">
@@ -274,7 +273,7 @@
           </div>
         </section>
       </div>
-      <!-- Projects -->
+      <!-- h2 Projects -->
       <div class="container">
         <section id="projects">
           <h2>Projects</h2>
@@ -352,7 +351,7 @@
           </div>
         </section>
       </div>
-      <!-- Contact -->
+      <!-- h2 Contact -->
       <div class="container">
         <section id="contact">
           <h2>Contact</h2>
@@ -373,19 +372,24 @@
         </section>
       </div>
     </main>
-    <!-- Footer -->
+    <!-- h Footer -->
     <footer>
-      <div class="row mt-3 pt-5 pb-5 bg-nav-foot">
-        <div class="col-1"></div>
-        <div class="col-10 text-center">
-          <p>
-            Thank you for getting this far! The present I promised, you've
-            already gotten. You got to know another human being in your
-            lifetime. People should appreciate these kind of little things in
-            life, because you only got 1. So, if you want this relationship to
-            be two-way, you should contact me when you're done here. Bye!
-          </p>
-          <p>© 2023 by Máté Rák</p>
+      <div class="mt-3 pt-5 pb-5 bg-nav-foot">
+        <div class="container">
+          <div class="row">
+            <div class="col-1"></div>
+            <div class="col-10 text-center">
+              <p>
+                Thank you for getting this far! The present I promised, you've
+                already gotten. You got to know another human being in your
+                lifetime. People should appreciate these kind of little things
+                in life, because you only got 1. So, if you want this
+                relationship to be two-way, you should contact me when you're
+                done here. Bye!
+              </p>
+              <p>© 2023 by Máté Rák</p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="col-1"></div>
