--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
           <!-- Tab navigation -->
           <div class="card text-center">
             <div class="card-header">
-              <ul class="nav nav-tabs card-header-tabs">
+              <ul class="nav nav-tabs card-header-tabs skill__container">
                 <li class="nav-item">
                   <a
-                    class="nav-link active"
+                    class="nav-link active nav__tab"
                     aria-current="true"
                     href="#"
                     id="workskills"
@@ -192,15 +192,19 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" id="nav-schoolskills">School</a>
+                  <a class="nav-link nav__tab" href="" id="nav-schoolskills"
+                    >School</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" id="nav-selfskills"
+                  <a class="nav-link nav__tab" href="" id="nav-selfskills"
                     >Self-learnt</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" id="nav-softskills">Soft</a>
+                  <a class="nav-link nav__tab" href="" id="nav-softskills"
+                    >Soft</a
+                  >
                 </li>
               </ul>
             </div>
@@ -277,77 +281,83 @@
       <div class="container">
         <section id="projects">
           <h2>Projects</h2>
-          <div
-            id="carouselExampleCaptions"
-            class="carousel carousel-dark slide"
-            data-bs-ride="carousel"
-          >
-            <div class="carousel-indicators">
-              <button
-                type="button"
-                data-bs-target="#carouselExampleCaptions"
-                data-bs-slide-to="0"
-                class="active"
-                aria-current="true"
-                aria-label="Slide 1"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleCaptions"
-                data-bs-slide-to="1"
-                aria-label="Slide 2"
-              ></button>
-            </div>
-            <div class="carousel-inner">
-              <!-- Slide -->
-              <div class="carousel-item active">
-                <img
-                  src="img/forkify.png"
-                  class="d-block w-100 project-images"
-                  alt="forkify"
-                />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Slide</h5>
-                  <p>Lorem ipsum</p>
+          <div class="row">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-10 d-flex justify-content-center">
+              <div
+                id="carouselExampleCaptions"
+                class="carousel carousel-dark slide"
+                data-bs-ride="carousel"
+                style="max-width: 1000px"
+              >
+                <div class="carousel-indicators">
+                  <button
+                    type="button"
+                    data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide-to="0"
+                    class="active"
+                    aria-current="true"
+                    aria-label="Slide 1"
+                  ></button>
+                  <button
+                    type="button"
+                    data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide-to="1"
+                    aria-label="Slide 2"
+                  ></button>
                 </div>
-              </div>
-              <!-- Slide -->
-              <div class="carousel-item">
-                <img
-                  src="img/github.jpg"
-                  class="d-block w-100 project-images"
-                  alt="github"
-                />
-                <div class="carousel-caption d-none d-md-block text-white">
-                  <h5>Slide</h5>
-                  <p>Lorem ipsum</p>
+                <div class="carousel-inner row">
+                  <!-- Slide -->
+                  <div class="carousel-item active">
+                    <img
+                      src="img/forkify.png"
+                      class="d-block w-100 project-images"
+                      alt="forkify"
+                    />
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Slide</h5>
+                      <p>Lorem ipsum</p>
+                    </div>
+                  </div>
+                  <!-- Slide -->
+                  <div class="carousel-item">
+                    <img
+                      src="img/github.jpg"
+                      class="d-block w-100 project-images"
+                      alt="github"
+                    />
+                    <div class="carousel-caption d-none d-md-block text-white">
+                      <h5>Slide</h5>
+                      <p>Lorem ipsum</p>
+                    </div>
+                  </div>
                 </div>
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-bs-target="#carouselExampleCaptions"
+                  data-bs-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-bs-target="#carouselExampleCaptions"
+                  data-bs-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
               </div>
             </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselExampleCaptions"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
-            </button>
           </div>
         </section>
       </div>
