scripting-skill-tab-component

--- a/index.html
+++ b/index.html
@@ -181,36 +181,32 @@
           <!-- Tab navigation -->
           <div class="card text-center">
             <div class="card-header">
-              <ul class="nav nav-tabs card-header-tabs skill__container">
+              <ul class="nav nav-tabs card-header-tabs skill__tabs__container">
                 <li class="nav-item">
-                  <a
-                    class="nav-link active nav__tab"
-                    aria-current="true"
-                    href="#"
-                    id="workskills"
+                  <a class="nav-link active skill__tab" href="#" data-tab="1"
                     >Work</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link nav__tab" href="" id="nav-schoolskills"
+                  <a class="nav-link skill__tab" href="#" data-tab="2"
                     >School</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link nav__tab" href="" id="nav-selfskills"
+                  <a class="nav-link skill__tab" href="#" data-tab="3"
                     >Self-learnt</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link nav__tab" href="" id="nav-softskills"
-                    >Soft</a
-                  >
+                  <a class="nav-link skill__tab" href="#" data-tab="4">Soft</a>
                 </li>
               </ul>
             </div>
-            <div class="card-body justify-content-between">
-              <!-- Card deck -->
-              <div class="row card-deck-sortable">
+            <div
+              class="card-body justify-content-between skill__deck__container"
+            >
+              <!-- Work card deck -->
+              <div class="row card-deck-sortable skill__deck">
                 <!-- Card -->
                 <div class="col-auto">
                   <div
@@ -233,6 +229,152 @@
                     style="max-width: 18rem"
                   >
                     <div class="card-header h5">Title 1</div>
+                    <div class="card-body">
+                      <p class="card-text">
+                        Suspendisse vitae est commodo, consectetur dui eu,
+                        luctus dui.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card -->
+                <div class="col-auto">
+                  <div
+                    class="card text-dark bg-light mb-4"
+                    style="max-width: 18rem"
+                  >
+                    <div class="card-header h5">Title 1</div>
+                    <div class="card-body">
+                      <p class="card-text">
+                        Suspendisse vitae est commodo, consectetur dui eu,
+                        luctus dui.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Card -->
+                <div class="col-auto">
+                  <div
+                    class="card text-dark bg-light mb-4"
+                    style="max-width: 18rem"
+                  >
+                    <div class="card-header h5">Title 1</div>
+                    <div class="card-body">
+                      <p class="card-text">
+                        Suspendisse vitae est commodo, consectetur dui eu,
+                        luctus dui.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- School card deck -->
+              <div class="row d-none card-deck-sortable skill__deck">
+                <!-- Card -->
+                <div class="col-auto">
+                  <div
+                    class="card text-dark bg-light mb-4"
+                    style="max-width: 18rem"
+                  >
+                    <div class="card-header h5">Title 1</div>
+                    <div class="card-body">
+                      <p class="card-text">
+                        Suspendisse vitae est commodo, consectetur dui eu,
+                        luctus dui.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card -->
+                <div class="col-auto">
+                  <div
+                    class="card text-dark bg-light mb-4"
+                    style="max-width: 18rem"
+                  >
+                    <div class="card-header h5">Title 1</div>
+                    <div class="card-body">
+                      <p class="card-text">
+                        Suspendisse vitae est commodo, consectetur dui eu,
+                        luctus dui.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Card -->
+                <div class="col-auto">
+                  <div
+                    class="card text-dark bg-light mb-4"
+                    style="max-width: 18rem"
+                  >
+                    <div class="card-header h5">Title 1</div>
+                    <div class="card-body">
+                      <p class="card-text">
+                        Suspendisse vitae est commodo, consectetur dui eu,
+                        luctus dui.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Self-learnt card deck -->
+              <div class="row d-none card-deck-sortable skill__deck">
+                <!-- Card -->
+                <div class="col-auto">
+                  <div
+                    class="card text-dark bg-light mb-4"
+                    style="max-width: 18rem"
+                  >
+                    <div class="card-header h5">Title 1</div>
+                    <div class="card-body">
+                      <p class="card-text">
+                        Suspendisse vitae est commodo, consectetur dui eu,
+                        luctus dui.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card -->
+                <div class="col-auto">
+                  <div
+                    class="card text-dark bg-light mb-4"
+                    style="max-width: 18rem"
+                  >
+                    <div class="card-header h5">Title 1</div>
+                    <div class="card-body">
+                      <p class="card-text">
+                        Suspendisse vitae est commodo, consectetur dui eu,
+                        luctus dui.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Softskills card deck -->
+              <div class="row d-none card-deck-sortable skill__deck">
+                <!-- Card -->
+                <div class="col-auto">
+                  <div
+                    class="card text-dark bg-light mb-4"
+                    style="max-width: 18rem"
+                  >
+                    <div class="card-header h5">Title 67</div>
+                    <div class="card-body">
+                      <p class="card-text">
+                        Suspendisse vitae est commodo, consectetur dui eu,
+                        luctus dui.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card -->
+                <div class="col-auto">
+                  <div
+                    class="card text-dark bg-light mb-4"
+                    style="max-width: 18rem"
+                  >
+                    <div class="card-header h5">Title 76</div>
                     <div class="card-body">
                       <p class="card-text">
                         Suspendisse vitae est commodo, consectetur dui eu,
